Fixed: With Rainbow theme, a scrollbar appears at bottom where it's not needed (OFBIZ-10174)
With Rainbow theme, even in large screens, a scrollbar appears at bottom where
it's useless.

The CSS which is adding a border-right on the application bar is adding extra
1px width causing this issue. Attached the patch to remove extra width for the
same.

Changes made by hand

--- a/themes/rainbowstone/webapp/rainbowstone/rainbowstone-emerald.less
+++ b/themes/rainbowstone/webapp/rainbowstone/rainbowstone-emerald.less
@@ -886,7 +886,6 @@ a.user-pref-btn {
 
 #app-navigation {
   height: @sub-app-bar-height;
-  border-right: solid 1px @black;
   border-bottom: solid 1px @black;
   width: 100%;
   min-width: @min-container-width;
